--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -92,6 +92,13 @@ Desktop
     margin-right: auto;
   }
 
+  .small {
+    font-size:  0.8em;
+  }
+  .italic {
+    font-style: italic;
+  }
+
   h1,h2,h3,h4,h5,h6,
   h3 a:visited {
     font-weight: 400;
