eq graphInfo pre 4.2 and plugins support

--- a/core/template/dashboard/eqLogic.html
+++ b/core/template/dashboard/eqLogic.html
@@ -13,8 +13,8 @@
     <center>
       #cmd#
     </center>
-    #backGraph#
   </div>
+  <div class="eqlogicbackgraph"></div>
   <script>
     if ('#refresh_id#' != '') {
       $('.eqLogic[data-eqLogic_uid=#uid#] .refresh').on('click', function () {
@@ -24,7 +24,7 @@
       $('.eqLogic[data-eqLogic_uid=#uid#] .refresh').remove()
     }
 
-    if ($('.eqLogic[data-eqLogic_uid=#uid#] div.eqlogicbackgraph').length) {
+    if ($('.eqLogic[data-eqLogic_uid=#uid#] div.eqlogicbackgraph.hasgraph').length && typeof jeedom.eqLogic.drawGraphInfo === "function") {
       jeedom.eqLogic.drawGraphInfo($('.eqLogic[data-eqLogic_uid=#uid#] div.eqlogicbackgraph').data('cmdid'))
     }
   </script>
