--- a/desktop/css/coreWidgets.css
+++ b/desktop/css/coreWidgets.css
@@ -3,22 +3,22 @@ Core Widgets CSS @Jeedom
 Desktop
 */
 
-div.eqlogicbackgraph {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  bottom: -14px;
-  left: 0;
-  z-index: -100;
-  opacity: 0.65;
-}
-div.eqlogicbackgraph  path.highcharts-graph {
-  stroke-width: 2;
-}
-
 /* ____________________Global */
   [data-page=plan3d] .verticalAlign {
     z-index : auto !important;
+  }
+
+  div.eqlogicbackgraph {
+    width: 100%;
+    height: calc(100% - 20px);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: -100;
+    opacity: 0.65;
+  }
+  div.eqlogicbackgraph  path.highcharts-graph {
+    stroke-width: 2;
   }
 
   .eqLogic-widget div.cmd-widget {
