--- a/core/template/dashboard/eqLogic.html
+++ b/core/template/dashboard/eqLogic.html
@@ -25,7 +25,9 @@
     }
 
     if ($('.eqLogic[data-eqLogic_uid=#uid#] div.eqlogicbackgraph').length && typeof jeedom.eqLogic.drawGraphInfo === "function") {
-      jeedom.eqLogic.drawGraphInfo($('.eqLogic[data-eqLogic_uid=#uid#] div.eqlogicbackgraph').data('cmdid'))
+      var cmdId = $('.eqLogic[data-eqLogic_uid=#uid#] div.eqlogicbackgraph').data('cmdid')
+      jeedom.eqLogic.drawGraphInfo(cmdId)
+      $('.eqLogic[data-eqLogic_uid=#uid#] div.cmd-widget[data-cmd_id="' + cmdId + '"] .cmdName').prepend('• ')
     }
   </script>
 </div>
