--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -3307,9 +3307,10 @@ Desktop
   .element legend {
     background-color: transparent !important;
     color: var(--sc-lightTxt-color) !important;
-    text-align: center;
+    text-align: center !important;
     margin: 0 !important;
     min-width: 5.5em;
+    letter-spacing: -0.5px;
   }
 
   .element .btn,
