fix moving into empty object

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -625,6 +625,7 @@ Desktop
   .eqLogicSortable {
     list-style-type: none;
     padding-left: 0px;
+    min-height: 30px !important;
   }
   #searchResult a[role=searchTabLink] {
     display: table;
