--- a/desktop/css/editor.css
+++ b/desktop/css/editor.css
@@ -12,7 +12,9 @@ Theme ElFinder File Editor 2021 @Jeedom
 #elfinder > .ui-icon-gripsmall-diagonal-se {
   display: none !important;
 }
-
+.elfinder-preference-tabs {
+  padding: 10px 24px !important;
+}
 /* ____________________ELFINDER EDITOR */
   #elfinder .elfinder-toolbar::after {
     height: unset;
