More trad (sc templates)

--- a/core/template/scenario/report.default.html
+++ b/core/template/scenario/report.default.html
@@ -30,7 +30,7 @@
     <option value="pdf">{{PDF}}</option>
   </select>
   <span class="input-group-addon" style="width:100px;">{{Commandes}}</span>
-  <input class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="cmd" placeholder="Commandes" value="#cmd#" data-cmd_id="#id#" data-uid="#uid#"/>
+  <input class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="cmd" placeholder="{{Commandes}}" value="#cmd#" data-cmd_id="#id#" data-uid="#uid#"/>
   <span class="input-group-btn">
     <button class="btn btn-default listCmdMessage roundedRight" type="button" tooltip="{{Sélectionner la commande}}" data-uid="#uid#" data-cmd_id="#id#"><i class="fas fa-list-alt"></i></button>
   </span>
