--- a/core/template/scenario/alert.default.html
+++ b/core/template/scenario/alert.default.html
@@ -10,7 +10,7 @@
 
 <div class="input-group input-group-sm" style="width: 100%;padding-top: 1px">
   <span class="input-group-addon roundedLeft" style="width: 100px">{{Message}}</span>
-  <textarea class="message expressionAttr form-control " data-l1key="options" data-l2key="message" rows="1" style="resize:vertical;" placeholder="Message" data-cmd_id="#id#" data-uid="#uid#">#message#</textarea>
+  <textarea class="message expressionAttr form-control " data-l1key="options" data-l2key="message" rows="1" style="resize:vertical;" placeholder="{{Message}}" data-cmd_id="#id#" data-uid="#uid#">#message#</textarea>
   <span class="input-group-addon hasBtn roundedRight">
     <button class="btn btn-default roundedRight listCmdInfo" type="button" tooltip="{{Sélectionner la commande}}" data-cmd_id="#id#"  data-uid="#uid#"><i class="fas fa-list-alt"></i></button>
   </span>
