--- a/core/template/scenario/exportHistory.default.html
+++ b/core/template/scenario/exportHistory.default.html
@@ -1,6 +1,6 @@
 <div class="input-group input-group-sm" style="width: 100%; padding-top: 1px">
   <span class="input-group-addon roundedLeft" style="width: 100px">{{Historique à exporter}}</span>
-  <input class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="cmd_export" placeholder="Commandes" value="#cmd_export#" data-cmd_id="#id#" data-uid="#uid#"/>
+  <input class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="cmd_export" placeholder="{{Commandes}}" value="#cmd_export#" data-cmd_id="#id#" data-uid="#uid#"/>
   <span class="input-group-btn">
     <button class="btn btn-default listCmdInfo roundedRight" type="button" tooltip="{{Sélectionner la commande}}" data-uid="#uid#" data-cmd_id="#id#"><i class="fas fa-list-alt"></i></button>
   </span>
@@ -19,7 +19,7 @@
     <option value="csv">{{CSV}}</option>
   </select>
   <span class="input-group-addon" style="width:100px;">{{Commandes}}</span>
-  <input class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="cmd" placeholder="Commandes" value="#cmd#" data-cmd_id="#id#" data-uid="#uid#"/>
+  <input class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="cmd" placeholder="{{Commandes}}" value="#cmd#" data-cmd_id="#id#" data-uid="#uid#"/>
   <span class="input-group-btn">
     <button class="btn btn-default listCmdAction roundedRight" type="button" tooltip="{{Sélectionner la commande}}" data-uid="#uid#" data-cmd_id="#id#"><i class="fas fa-list-alt"></i></button>
   </span>
