--- a/core/template/scenario/wait.default.html
+++ b/core/template/scenario/wait.default.html
@@ -1,6 +1,6 @@
 <div class="input-group input-group-sm" style="width: 100%">
   <span class="input-group-addon roundedLeft" style="width: 100px">{{Condition}}</span>
-  <textarea class="message expressionAttr form-control ta_autosize" data-l1key="options" data-l2key="condition" rows="1" style="resize:vertical;" placeholder="Condition" data-cmd_id="#id#" data-uid="#uid#">#condition#</textarea>
+  <textarea class="message expressionAttr form-control ta_autosize" data-l1key="options" data-l2key="condition" rows="1" style="resize:vertical;" placeholder="{{Condition}}" data-cmd_id="#id#" data-uid="#uid#">#condition#</textarea>
   <span class="input-group-addon hasBtn roundedRight">
     <button class="btn btn-default listCmdInfo roundedRight" type="button" tooltip="{{Sélectionner la commande}}" data-cmd_id="#id#" data-uid="#uid#"><i class="fas fa-list-alt"></i></button>
   </span>
