Test equipment graph on mobile

--- a/core/template/mobile/eqLogic.html
+++ b/core/template/mobile/eqLogic.html
@@ -13,6 +13,7 @@
       #cmd#
     </div>
   </center>
+  #divGraphInfo#
   <script>
     if ('#refresh_id#' != '') {
       $('.eqLogic[data-eqLogic_uid=#uid#] .refresh').on('click', function () {
