--- a/mobile/css/coreWidgets.css
+++ b/mobile/css/coreWidgets.css
@@ -36,6 +36,19 @@ Mobile WebApp
     border:none !important;
   }
 
+  div.eqlogicbackgraph {
+    width: 100%;
+    height: calc(100% - 30px);
+    position: absolute;
+    bottom: 1px;
+    left: 0;
+    z-index: -100;
+    opacity: 0.65;
+  }
+  div.eqlogicbackgraph  path.highcharts-graph {
+    stroke-width: 2;
+  }
+
   /* v4.2 nouislider */
   div.cmd-widget .slider {
     margin-top: 8px !important;
