--- a/core/template/mobile/cmd.info.numeric.default.html
+++ b/core/template/mobile/cmd.info.numeric.default.html
@@ -1,8 +1,40 @@
 <div class="cmd cmd-widget" data-type="info" data-subtype="numeric" data-template="default" data-version="#version#" data-eqLogic_id="#eqLogic_id#" data-cmd_id="#id#" data-cmd_uid="#uid#">
-	<span class="cmdName #hide_name#">#name_display#</span> <strong class="state">#state#</strong> #unite#
+	<div class="arcgauge">
+		<span class="cmdName">#name_display#</span>
+		<div class="gauge cursor #history#" data-cmd_id="#id#"></div>
+	    <div class="gaugeValue" data-cmd_id="#id#"></div>
+	</div>
+	<span class="state"><strong>#state#</strong> <strong>#unite#</strong></span>
+  	<div class="cmdStats #hide_history#">
+      <span>#minHistoryValue#</span>|<span>#averageHistoryValue#</span>|<span>#maxHistoryValue# <i class="#tendance#"></i></span>
+  	</div>
+
 	<script>
-		jeedom.cmd.update['#id#'] = function(_options) {
-			$('.cmd[data-cmd_id=#id#] .state').empty().append(_options.display_value)
-		}
-	</script>
+    jeedom.cmd.update['#id#'] = function(_options) {
+      var cmd = $('.cmd[data-cmd_id=#id#]')
+      var minValue = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
+      var maxValue = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
+      if (_options.display_value >= maxValue) {
+        maxValue = _options.display_value
+        var angle = 0
+      } else if (_options.display_value <= minValue) {
+        minValue = _options.display_value
+        var angle = -180
+      } else {
+        var angle = (((_options.display_value - minValue) * 180) / (maxValue - minValue)) - 180
+      }
+      cmd.find('.gaugeValue').css('transform', 'scale(0.94) rotate('+angle+'deg)')
+      cmd.find('.state strong').first().text(_options.display_value)
+    }
+
+    if (is_numeric('#state#')) {
+      jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#'})
+    } else {
+      $('.cmd[data-cmd_uid=#uid#] .gauge').append('<center><span class="label label-danger">#state#</span></center>')
+    }
+
+    if ($.issetWidgetOptParam('#color#', 'color')) {
+      $('.cmd[data-cmd_id=#id#] .gaugeValue').css('border-color', '#color#')
+    }
+  </script>
 </div>
