--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -1200,8 +1200,11 @@ Desktop
     color: var(--al-danger-color) !important;
   }
 
+  .objectPreview .resume .objectSummaryParent:first-child {
+    border-radius: var(--border-radius) 0 0 0 !important;
+  }
   .objectPreview .resume .objectSummaryParent:last-child {
-    border-radius: 0 0 var(--border-radius) 0 !important;
+    border-bottom-right-radius: var(--border-radius) !important;
   }
 
   div.ui-dialog[aria-describedby="md_overviewSummary"] {
