--- a/core/template/dashboard/cmd.info.string.tmplmultistateline.html
+++ b/core/template/dashboard/cmd.info.string.tmplmultistateline.html
@@ -1,6 +1,6 @@
 <div class="cmd cmd-widget #history#" data-type="info" data-subtype="string" data-template="tmplmultistateline" data-version="#version#" data-eqLogic_id="#eqLogic_id#" data-cmd_id="#id#" data-cmd_uid="#uid#">
   <div class="content-xs">
-    <span class="cmdName #hide_name#">#name_display# </span> <span class="iconCmdLine"></span>
+    <span class="cmdName #hide_name#">#name_display# </span> <span class="iconCmd"></span>
   </div>
   <div class="value">
     <span class="timeCmd label label-default #history#" data-type="info"></span>
