--- a/core/template/mobile/cmd.info.string.tmplmultistateline.html
+++ b/core/template/mobile/cmd.info.string.tmplmultistateline.html
@@ -1,6 +1,6 @@
 <div class="cmd cmd-widget" data-type="info" data-subtype="string" data-template="tmplmultistateline" data-version="#version#" data-eqLogic_id="#eqLogic_id#" data-cmd_id="#id#" data-cmd_uid="#uid#">
   <center>
-    <span class="cmdName #hide_name#">#name_display#</span> <span class="iconCmdLine"></span>
+    <span class="cmdName #hide_name#">#name_display#</span> <span class="iconCmd"></span>
     <span class="timeCmd value #history#" data-type="info"></span>
   </center>
   <script>
