--- a/core/template/dashboard/cmd.info.string.tmplmultistateline.html
+++ b/core/template/dashboard/cmd.info.string.tmplmultistateline.html
@@ -22,7 +22,7 @@
       try {
         var state = ''
         #test#
-        cmd.find('.iconCmd').empty().append(state)
+        cmd.find('.iconCmdLine').empty().append(state)
       } catch (error) {
         console.log(error)
       }
